# agent-research

./: .gitignore  README.md  pyproject.toml
backend/: agent_stream.py  main.py
src/: agent.py  config.py  main.py  preferred_answers.py  test.py
src/agents/: agent.py  dsfdf.py  function_registry.py  reasoning.py
src/client/: model_client.py
src/clients/: chat_client.py  model_client.py  scraper_client.py  sheet_client.py
src/clients/functions/: database_query.py
src/functions/: get_current_time.py  scraper.py  summarize_result.py  web_search.py
src/tools/: preferred_answers.py
src/utils/: duplicate_check.py  reasoning.py
test/: database_query.py  fake_stream.py
