[tool.poetry]
name = "agent-research"
version = "0.1.0"
description = ""
authors = ["momonong <morrischen2.9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.65.2"
gspread = "^6.2.0"
oauth2client = "^4.1.3"
rapidfuzz = "^3.12.2"
scrapegraphai = "^1.42.0"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
playwright = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
